--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     </head>
 
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
         <script src="./imagenet_classes.js"></script>
-        <script src="./dist/tf-core.js"></script>
-        <img id="img" width="224" height="224" src="./dog.jpg" />
+        <img id="dog" width="224" height="224" src="./dog.jpg" />
+        <canvas width="224" height="224" id="c"></canvas>
         <script src="./index.js"></script>
     </body>
 </html>
